--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ apispec==6.6.1
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.3
+Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 flask-smorest==0.44.0
@@ -15,11 +16,16 @@ Mako==1.3.3
 mariadb==1.1.10
 MarkupSafe==2.1.5
 marshmallow==3.21.1
+numpy==1.26.4
 packaging==24.0
+pandas==2.2.2
 passlib==1.7.4
+PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 pytz==2024.1
 six==1.16.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
+tzdata==2024.1
 webargs==8.4.0
 Werkzeug==3.0.2
